After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759847 - Glade crashes when loading projects with popover menus
Glade crashes when loading projects with popover menus
Status: RESOLVED FIXED
Product: glade
Classification: Applications
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: Glade 3 Maintainers
Glade 3 Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-24 12:30 UTC by LRN
Modified: 2015-12-26 07:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't crash when popover menu children have no visible-submenu set (1.35 KB, patch)
2015-12-24 12:30 UTC, LRN
committed Details | Review
A glade file that crashes glade (1.20 KB, application/xml)
2015-12-24 12:31 UTC, LRN
  Details

Description LRN 2015-12-24 12:30:27 UTC
It calls:
g_object_get (G_OBJECT (popover), "visible-submenu", &visible, NULL);
, but visible ends up being NULL. It then calls:
gtk_container_child_get (GTK_CONTAINER (popover), child, "submenu", &name, NULL);
, and name also end up as NULL.
It then tries to:
strcmp (visible, name);
and segfaults.
Comment 1 LRN 2015-12-24 12:30:32 UTC
Created attachment 317859 [details] [review]
Don't crash when popover menu children have no visible-submenu set
Comment 2 LRN 2015-12-24 12:31:50 UTC
Created attachment 317860 [details]
A glade file that crashes glade
Comment 3 Tristan Van Berkom 2015-12-26 07:20:04 UTC
Review of attachment 317859 [details] [review]:

Thanks for the patch.

I tried it out, found some other bug which I will be filing separately, and pushed to master :)