Don't crash when popover menu children have no visible-submenu set

https://bugzilla.gnome.org/show_bug.cgi?id=759847